@@ -4,8 +4,6 @@
  *
  * @author Lindsay Bradford
  * 
- * 
- *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
